# linear_regression

./: README.md  linear-regression.ipynb  pyproject.toml
